# local-media-server

./: .env  Cargo.toml  lf:w  netflix_clone.db  netflix_clone.db-shm  netflix_clone.db-wal  sqlx-data.json
migrations/: 20230513133609_ok.sql  20230520035718_deletion_request.sql  20230521065631_movies.sql  20230521090553_like_dislike.sql
src/: db.rs  lib.rs  main.rs
src/api/: admin_routes.rs  auth_routes.rs  mod.rs  movie_routes.rs  user_routes.rs
src/auth/: controller.rs  route.rs
src/models/: mod.rs  movie_model.rs  user_model.rs
src/services/: movie_service.rs  user_service.rs
src/traits/: crud.rs
src/user/: controller.rs  model.rs
